Edited <li> text in line-block

--- a/index.html
+++ b/index.html
@@ -19,8 +19,17 @@
             <h1>Bartosz Ogonowski</h1>
             <ul>
                 <li>I like what I do</li>
-                <li>I am creative</li>
-                <li>I am open to get to know</li>
+                <li>
+                   <span class="ctext">I am creative
+                    </span>
+                    I am open to get to know
+                </li>
+                <!--
+                <li>
+                    <span class="ctext">I am open to get to know
+                    </span>
+                </li>
+                -->
             </ul>
         </header>
         
